{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 19,
  "lineage": "68ebd075-b307-0fd4-0b87-51e81de6dcec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:723302543789:instance/i-0f2dd1df7fbc321bf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2dd1df7fbc321bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practiceAWSkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb76cc9ebb3ff960",
            "private_dns": "ip-172-31-4-208.ap-south-1.compute.internal",
            "private_ip": "172.31.4.208",
            "public_dns": "ec2-3-6-126-147.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.126.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c93fa50bb019004f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2_demo_allow_http_sg",
              "ec2_demo_allow_mysql_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06733a1456b297327",
            "tags": {
              "Name": "Created_By_Terraform_Automation"
            },
            "tags_all": {
              "Name": "Created_By_Terraform_Automation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c731342d958610f",
              "sg-08b8eb427f8c03212"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_demo_dbsg",
            "aws_security_group.ec2_demo_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_demo_dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723302543789:security-group/sg-08b8eb427f8c03212",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b8eb427f8c03212",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ec2_demo_allow_mysql_sg",
            "name_prefix": "",
            "owner_id": "723302543789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e03741943c38f02f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723302543789:security-group/sg-01c731342d958610f",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c731342d958610f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_demo_allow_http_sg",
            "name_prefix": "",
            "owner_id": "723302543789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e03741943c38f02f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}